--- a/templates/includes/main-nav-items.html
+++ b/templates/includes/main-nav-items.html
@@ -16,6 +16,20 @@
             </ul>
         </li>  <!--Close About Menu-->
 
+            <!--View All Guitars -->
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="{% url 'guitars' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <h4 class="mb-0">View All Guitars</h4>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">By Tier</a></li>
+                <li><a class="dropdown-item" href="#">By Overall Rating</a></li>
+                <li><a class="dropdown-item" href="#">By Status</a></li>
+            </ul>
+
+        </li>  <!--Close About Menu-->
+
 
         <!--Guitars Dropdown Menu-->
         <li class="nav-item dropdown">
