--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,7 @@
 
 {% block content %}
     <div class="container h-100">
-
-        <div class="row h-100">
+        <div class="row">
             <div class="col main-content mt-2">
                 <h1 class="gold-txt">Welcome to the Guitar Vault</h1>
                 <div class="d-flex">
@@ -25,6 +24,39 @@
         <div class="row">
             <div class="col main-content mt-2">
                 <h1 class="gold-txt">Featured Guitars</h1>
+                
+                <div id="carousel-featured-guitars" class="carousel slide h-100" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carousel-featured-guitars" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carousel-featured-guitars" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carousel-featured-guitars" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        {% if guitar.pk == '1' %}
+                            <img src="{{ guitar.image_id.url }}" class="d-block w-100" alt="">
+                        {% endif %}
+                      </div>
+                      <div class="carousel-item">
+                        {% if guitar.pk == '2' %}
+                            <img src="{{ guitar.image_id.url }}" class="d-block w-100" alt="">
+                        {% endif %}
+                      </div>
+                      <div class="carousel-item">
+                        {% if guitar.pk == '3' %}
+                            <img src="{{ guitar.image_id.url }}" class="d-block w-100" alt="">
+                        {% endif %}
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel-featured-guitars" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel-featured-guitars" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
         </div>
 
