--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -14,7 +14,7 @@
 {% block content %}
     <div class="container h-100">
         <div class="row">
-            <div class="col text-center logo-txt gold-txt display-4 mt-5 mb-5">
+            <div class="col text-center logo-txt gold-special-txt display-4 mt-5 mb-5">
                 Guitars
             </div>
         </div>
