--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
               <img class="navbar-logo" src="/media/GV-Logo.png"/>
             </div>
             <div class="col-12 col-md-6 align-self-center text-center my-auto">
-              <h1 class="logo-txt gold-txt display-1">
+              <h1 class="logo-txt gold-special-txt display-1">
                 <a href="{% url 'home' %}">Guitar Vault</a></h1>
             </div>
 
