--- a/guitars/templates/guitars/guitar_detail.html
+++ b/guitars/templates/guitars/guitar_detail.html
@@ -23,7 +23,7 @@
                 <div class="row">
 
                     <!-- Guitar image -->
-                    <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="col-12 col-md-4 mb-4">
                         <div class="guitar-image-container">
                             {% if guitar.image_id %}
                                 <a href="{{ guitar.image_id.url }}" target="_blank">
@@ -39,7 +39,7 @@
                     </div>
 
                     <!-- Guitar Details-->
-                    <div class="col-12 col-md-6 col-lg-8 mb-4">
+                    <div class="col-12 col-md-8 mb-4">
                         <div class="row guitar-details-container">
                         
                             <!-- Main Details -->
