--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -98,24 +98,40 @@
                                 
                                 <!--card footer-->
                                 <div class="card-footer text-muted">
-                                    <ul class="list-inline list-unstyled text-center">
-                                        <li class="list-inline-item w-45">
+                                    <ul class="list-inline list-unstyled d-flex justify-content-evenly align-items-baseline">
+                                        <li class="list-inline-item w-20 pb-0 ">
                                             <!--Reminder - once profiles created add JS to toggle display of favourite / remove favourite button-->
-                                            <btn type="button" class="btn btn-outline-info btn-sm d-none">
-                                                <i class="fas fa-heart"></i>
-                                                <span class=""></span>
+                                            
+                                            <!--option A : Add Favourite -->
+                                            <btn type="button" class="btn btn-sm btn-add-fav align-baseline">
+                                                <i class="far fa-heart fa-2x"></i>
+                                                <p class="pb-0"><small>Add Favourite</small></p>
                                             </btn>
-                                            <!--favourite toggle option B-->
-                                            <btn type="button" class="btn btn-sm btn-outline-success">
-                                                <i class="far fa-heart"></i>
-                                                <span class=""></span>
+                                            
+                                            <!--option B : Remove Favourite -->
+                                            <btn type="button" class="btn btn-sm d-none btn-remove-fav align-baseline">
+                                                <i class="fas fa-heart fa-2x"></i>
+                                                <p class="ps-2"><small>Remove Favourite</small></p>
                                             </btn>
                                         </li>
 
-                                        <li class="list-inline-item w-45">
-                                            <btn type="button" class="btn btn-sm btn-take">
-                                                <i class="fas fa-cart-arrow-down"></i>
-                                                <span class="ps-3">Loan Guitar</span>
+                                        <li class="list-inline-item w-20 pb-0 align-baseline">
+                                            <!--REMINDER - once profile complete switch between add / remove icon-->
+
+                                            <!--option A : Add to Rack -->
+                                            <btn type="button" class="btn btn-sm btn-take align-baseline">
+                                                <!--Temporary image src to be updated with correct Media links-->
+                                                <img src="/media/Guitar_gold_add.svg" class="guitar-svg add-gold">
+                                                <img src="/media/Guitar_black_add.svg" class="guitar-svg add-black">
+                                                <p class=""><small>Add to Rack</small></p>
+                                            </btn>
+
+                                            <!--option B : Remove from Rack -->
+                                            <btn type="button" class="btn btn-sm btn-take d-none align-baseline">
+                                                <!--Temporary image src to be updated with correct Media links-->
+                                                <img src="/media/Guitar_gold_remove.svg" class="guitar-svg add-gold">
+                                                <img src="/media/Guitar_black_remove.svg" class="guitar-svg add-black">
+                                                <p class="ps-2"><small>Remove from Rack</small></p>
                                             </btn>
                                         </li>
                                     </ul>
