--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,7 +30,8 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner text-center">
                         <div class="carousel-item active">
-                            <img src="{{ MEDIA_URL }}gv3.png" class="d-block" alt="...">
+                            <!--Temporary image src to be updated with correct Media links-->
+                            <img src="/media/gv3.png" class="d-block" alt="...">
                         </div>
                         <div class="carousel-item">
                             <img src="/media/gv6.png" class="d-block" alt="...">
