--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/d01fd203b5.js" crossorigin="anonymous"></script>
         <!--Additional FontAwesome JS to enable 'stacking' feature-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.15.0/js/all.js"></script>
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <!-- JQuery -->
