Added search functionality

--- a/templates/includes/main-nav-items.html
+++ b/templates/includes/main-nav-items.html
@@ -94,7 +94,7 @@
     </ul> <!--Close Nav Dropdown Menus-->
 
     <!--Search Form-->
-    <form class="d-flex" method="GET" action="">
+    <form class="d-flex" method="GET" action="{% url 'guitars' %}">
         <div class="input-group gold-accent-outline">
             <input class="form-control search-input gold-accent-outline me-1" type="text" name="q" placeholder="Search the vault" aria-label="Search">
             <div class="input-group-append">
