--- a/templates/includes/mobile-nav-items.html
+++ b/templates/includes/mobile-nav-items.html
@@ -34,9 +34,13 @@
                 
     {% else %}
     <ul class="list-inline list-unstyled">
-        <li class="list-inline-item gold-accent-txt" href="{% url 'account_signup' %}"><h4>Join</h4></li>
+        <li class="list-inline-item gold-accent-txt" href="{% url 'account_signup' %}">
+            <h4>Join</h4>
+        </li>
         <li class="vr"></li>
-        <li class="list-inline-item gold-accent-txt" href="{% url 'account_login' %}"><h4>Log In</h4></li>
+        <li class="list-inline-item gold-accent-txt" href="{% url 'account_login' %}">
+            <h4>Log In</h4>
+        </li>
       </ul>
     {% endif %}
 </div> <!--close Profile col-->
