Adding filter - current bug being explored

--- a/templates/includes/main-nav-items.html
+++ b/templates/includes/main-nav-items.html
@@ -37,7 +37,7 @@
                 <h4 class="mb-0">Electric</h4>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">All Electric Guitars</a></li>
+                <li><a class="dropdown-item" href="{% url 'guitars' %}?category=electric">All Electric Guitars</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Platinum</a></li>
                 <li><a class="dropdown-item" href="#">Gold</a></li>
