Revised category IDs to correctly map to guitar refs, also fixed bug with filter view.py

--- a/templates/includes/main-nav-items.html
+++ b/templates/includes/main-nav-items.html
@@ -37,7 +37,7 @@
                 <h4 class="mb-0">Electric</h4>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url 'guitars' %}?category=electric">All Electric Guitars</a></li>
+                <li><a class="dropdown-item" href="{% url 'guitars' %}?category=Electric">All Electric Guitars</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Platinum</a></li>
                 <li><a class="dropdown-item" href="#">Gold</a></li>
@@ -52,7 +52,7 @@
                 <h4 class="mb-0">Bass</h4>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">All Bass Guitars</a></li>
+                <li><a class="dropdown-item" href="{% url 'guitars' %}?category=Bass">All Bass Guitars</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Platinum</a></li>
                 <li><a class="dropdown-item" href="#">Gold</a></li>
@@ -67,7 +67,7 @@
                 <h4 class="mb-0">Acoustic</h4>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">All Acoustic Guitars</a></li>
+                <li><a class="dropdown-item" href="{% url 'guitars' %}?category=Acoustic">All Acoustic Guitars</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Platinum</a></li>
                 <li><a class="dropdown-item" href="#">Gold</a></li>
